# esp-uuid

./: CMakeLists.txt  README.md
include/: esp_uuid.h
src/: esp_uuid.c
test/: CMakeLists.txt  test_esp_uuid.c
